<resources>
    <!-- Defaults -->
    <string name="app_name">World Scape</string>

    <!-- Placeholders -->
    <string name="world_detail_placeholder">[World Name]</string>
    <string name="placeholder_title">Lorem Ipsum</string>
    <string name="placeholder_desc">It is a long established fact that a reader
        will be distracted by the readable content of a page when looking at its
        layout. The point of using Lorem Ipsum is</string>

    <!-- Menu Items -->
    <string name="placeholder">Placeholder</string>
    <string name="characters">Characters</string>
    <string name="settings">Settings</string>
    <string name="places">Places</string>
    <string name="stories">Stories</string>
    <string name="notes">Notes</string>

    <!-- Main Menu Strings -->
    <string name="add_world">Add World</string>
    <string name="delete_world_dialog_title">Delete World</string>
    <string name="delete_world_dialog_message">This will delete the world and all information
        relating to this world</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_accept">Delete</string>
    <string name="delete_fail">Could not delete world</string>

    <!-- Create World Strings -->
    <string name="create_world_title">Create a World</string>
    <string name="create_world_create">Create World</string>
    <string name="name_of_world">Name of World</string>
    <string name="desc_of_world">Description of World</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="genre_of_world">Genre of World</string>
    <string name="action_text">Retry</string>
    <string-array name="genres"> <!-- TODO EXPAND -->
        <item>Fantasy</item>
        <item>Sci-Fi</item>
        <item>Other</item>
    </string-array>

    <!-- Generics -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Create Character Strings -->
    <string name="create_character_title">Create a Character</string>
    <string name="create_character_create">Create Character</string>
    <string name="add_field">Add a field</string>
    <string name="character_title">Name of Character</string>
    <string name="birth_title">Year of Birth</string>
    <string name="birth_loc">Place of Birth</string>
    <string name="current_loc">Current Location / Region</string>
    <string name="biography_cc">Biography / Description</string>
    <string name="birthdate">Birthday</string>
    <string name="race">Race</string>
    <string name="add_stats">Add a stat sheet</string>
    <string name="general_title">General Information about the Character</string>
    <string name="physical_title">Physical Features of Character</string>
    <string name="optional">(Optional)</string>
    <string name="eye_color">Eye Colour</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hair">Hair Colour</string>
    <string name="build">Build</string>
    <string name="markings">Tattoos / Markings / Scars</string>
    <string name="hair_style">Hair Style</string>
    <string name="clothing_style">Clothing Style</string>
    <string name="personality">Personality / Traits</string>
    <string name="occupation">Occupation / Job</string>
    <string name="positive_traits">Positive Traits</string>
    <string name="negative_traits">Negative Traits</string>
    <string name="interests">Interests</string>
    <string name="fears">Fears</string>
    <string name="name_of_trait">Name of Trait</string>
    <string name="add_trait">Add Trait</string>
    <string name="add_trait_pos">Add Positive Trait</string>
    <string name="add_trait_neg">Add Negative Trait</string>
    <string name="add_interest">Add Interest</string>
    <string name="add_fear">Add Fear</string>
    <string name="name_of_interest">Name of Interest</string>
    <string name="name_of_fear">Name of Fear</string>
    <string name="rpg_title">Role Playing Aspects of Character</string>
    <string name="add_ability">Add a Ability</string>
    <string name="abilities">Abilities</string>
    <string name="stats">Stats</string>
    <string name="preset">Presets</string>
    <string name="save">Save</string>

    <!-- Positive Traits -->
    <string name="adventurous">Adventurous</string>
    <string name="affable">Affable</string>
    <string name="capable">Capable</string>
    <string name="charming">Charming</string>
    <string name="confident">Confident</string>
    <string name="conscientious">Conscientious</string>
    <string name="cultured">Cultured</string>
    <string name="dependable">Dependable</string>
    <string name="discreet">Discreet</string>
    <string name="dutiful">Dutiful</string>
    <string name="encouraging">Encouraging</string>
    <string name="exuberant">Exuberant</string>
    <string name="fair">Fair</string>
    <string name="fearless">Fearless</string>
    <string name="gregarious">Gregarious</string>
    <string name="helpful">Helpful</string>
    <string name="humble">Humble</string>
    <string name="imaginative">Imaginative</string>
    <string name="impartial">Impartial</string>
    <string name="independent">Independent</string>
    <string name="keen">Keen</string>
    <string name="meticulous">Meticulous</string>
    <string name="observant">Observant</string>
    <string name="optimistic">Optimistic</string>
    <string name="persistent">Persistent</string>
    <string name="precise">Precise</string>
    <string name="reliable">Reliable</string>
    <string name="sociable">Sociable</string>
    <string name="trusting">Trusting</string>
    <string name="valiant">Valiant</string>

    <!-- Negative Traits -->
    <string name="arrogant">Arrogant</string>
    <string name="boorish">Boorish</string>
    <string name="bossy">Bossy</string>
    <string name="conceited">Conceited</string>
    <string name="cowardly">Cowardly</string>
    <string name="dishonest">Dishonest</string>
    <string name="finicky">Finicky</string>
    <string name="impulsive">Impulsive</string>
    <string name="lazy">Lazy</string>
    <string name="malicious">Malicious</string>
    <string name="obnoxious">Obnoxious</string>
    <string name="picky">Picky</string>
    <string name="pompous">Pompous</string>
    <string name="quarrelsome">Quarrelsome</string>
    <string name="rude">Rude</string>
    <string name="sarcastic">Sarcastic</string>
    <string name="self_centered">Self-Centered</string>
    <string name="slovenly">Slovenly</string>
    <string name="sneaky">Sneaky</string>
    <string name="stingy">Stringy</string>
    <string name="sullen">Sullen</string>
    <string name="surly">Surly</string>
    <string name="thoughtless">Thoughtless</string>
    <string name="unfriendly">Unfriendly</string>
    <string name="unruly">Unruly</string>
    <string name="vulgar">Vulgar</string>

    <string name="additional_chip">Trait</string>

    <!-- Errors -->
    <string name="err_save_world">"ERR: Could not Save World"</string>
    <string name="err_save_character">"ERR: Could not Save Character"</string>
    <string name="err_world">No title added</string>
    <string name="err_desc">No description added</string>
    <string name="err_genre">No genre chosen</string>
    <string name="war_img">No image chosen</string>

    <string name="err_no_cc_name">No character name chosen</string>
    <string name="err_no_bio">No description / biography chosen</string>
    <string name="err_no_by">No birth year chosen</string>
    <string name="err_no_pob">No place of birth chosen</string>
    <string name="err_no_bday">No birth day chosen</string>
    <string name="err_no_cl">No current location chosen</string>
    <string name="err_no_height">No height chosen</string>
    <string name="err_no_weight">No weight chosen</string>
    <string name="err_no_eye_colour">No eye colour chosen</string>
    <string name="err_no_race">No race chosen</string>
    <string name="err_no_hair">No hair colour chosen</string>
    <string name="err_no_build">No build chosen</string>
    <string name="err_no_markings">No markings / tattoos chosen</string>
    <string name="err_no_hair_style">No hair style chosen</string>
    <string name="err_no_clothing_style">No clothing style chosen</string>
    <string name="err_no_job">No Occupation or Job chosen</string>

    <!-- World Detail Strings -->
    <string name="recent_characters">Recent Characters</string>
    <string name="recent_places">Recent Places</string>
    <string name="recent_stories">Recent Stories</string>

    <!-- Character Layout Strings -->
    <string name="add_character">Add Character</string>

    <!-- Stat Sheet String -->
    <!-- Shared Strings -->

    <!-- FE Strings -->
    <string name="hit_points">Hit Points (HP)</string>
    <string name="movement">Movement (MV)</string>
    <string name="strength">Strength (STR)</string>
    <string name="magic">Magic (MAG)</string>
    <string name="dexterity">Dexterity (DEX)</string>
    <string name="speed">Speed (SPD)</string>
    <string name="luck">Luck (LCK)</string>
    <string name="defense">Defense (DEF)</string>
    <string name="resistance">Resistance (RES)</string>
    <string name="charm">Charm (CHA)</string>

    <!-- Content Descriptions -->
    <string name="cd_settings">Settings Button</string>
    <string name="cd_menu">Menu Button</string>
    <string name="cd_back">Back Button</string>
    <string name="cd_preview">Preview of Chosen Image</string>
    <string name="cd_show_c">Show all Characters</string>
    <string name="cd_show_p">Show all Places</string>
    <string name="cd_show_s">Show all Stories</string>
    <string name="cd_character_preview">Character Image</string>
    <string name="cd_world_preview">Image of chosen World</string>
    <string name="cd_link_icon">Link Button</string>

    <!-- Hints -->
    <string name="world_name_hint">Enter a world name</string>
    <string name="desc_hint">Enter a description of world</string>

    <!-- Version is denoted as Letter [A, B, S] : Alpha Release, Beta Release and Stable Release  -->
    <!-- First number is a major update such as a new feature and second number is for small updates such as: bugfixes or typos -->
    <string name="version">A.0.1</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_character_detail">CharacterDetailActivity</string>

    <!-- Settings -->
    <!-- Preference Titles -->
    <string name="theme_header">Theme</string>
    <string name="version_header">Version</string>

</resources>