<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:addStatesFromChildren="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/tvRPG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:text="@string/rpg_title"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stats"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/tvRPG"
            app:layout_constraintTop_toBottomOf="@+id/tvRPG" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddStat"
            style="@style/GradientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_notes_24"
            android:onClick="loadStatDialog"
            android:text="@string/add_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStats" />

        <TextView
            android:id="@+id/tvAbilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/abilities"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/tvRPG"
            app:layout_constraintTop_toBottomOf="@+id/btnAddStat" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddAbility"
            style="@style/GradientButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_baseline_games_24"
            android:onClick="loadStatDialog"
            android:text="@string/add_ability"
            app:layout_constraintEnd_toEndOf="@+id/btnAddStat"
            app:layout_constraintStart_toStartOf="@+id/btnAddStat"
            app:layout_constraintTop_toBottomOf="@+id/tvAbilities" />

        <Space
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddAbility" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>